--- a/MyMonee-Final/Views/AddImpianViewController.xib
+++ b/MyMonee-Final/Views/AddImpianViewController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="landscape" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
@@ -26,11 +26,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dHi-KP-aLb">
-                    <rect key="frame" x="16" y="65.5" width="128" height="24"/>
+                    <rect key="frame" x="60" y="21.5" width="144" height="24"/>
                     <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="14"/>
                     <state key="normal" title="  Tambah Impian" image="Back_Chevron">
                         <color key="titleColor" name="4F4F4F"/>
@@ -40,19 +40,19 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Judul" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0eO-04-gGf">
-                    <rect key="frame" x="16" y="117.5" width="34.5" height="16.5"/>
+                    <rect key="frame" x="60" y="73.5" width="38.5" height="20"/>
                     <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="14"/>
                     <color key="textColor" name="4F4F4F"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Target Capaian (Rp)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rNb-KF-pW8">
-                    <rect key="frame" x="16" y="177.5" width="123.5" height="16.5"/>
+                    <rect key="frame" x="60" y="143.5" width="145" height="20"/>
                     <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="14"/>
                     <color key="textColor" name="4F4F4F"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1yn-q7-SOV">
-                    <rect key="frame" x="19" y="743" width="376" height="43"/>
+                    <rect key="frame" x="63" y="274" width="770" height="43"/>
                     <color key="backgroundColor" name="5069B8"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="43" id="aRA-p4-WBw"/>
@@ -66,13 +66,13 @@
                     </connections>
                 </button>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Target Impian" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lr7-du-8Ab">
-                    <rect key="frame" x="16" y="194" width="207" height="29.5"/>
+                    <rect key="frame" x="60" y="163.5" width="776" height="35.5"/>
                     <color key="textColor" name="4F4F4F"/>
                     <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="24"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Judul Impian" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4CQ-ep-0nA">
-                    <rect key="frame" x="16" y="134" width="207" height="29.5"/>
+                    <rect key="frame" x="60" y="93.5" width="776" height="36"/>
                     <color key="textColor" name="4F4F4F"/>
                     <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="24"/>
                     <textInputTraits key="textInputTraits"/>
@@ -81,24 +81,24 @@
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="4CQ-ep-0nA" firstAttribute="width" secondItem="fnl-2z-Ty3" secondAttribute="width" multiplier="0.5" id="4SR-e8-0gf"/>
                 <constraint firstItem="Lr7-du-8Ab" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="AGK-Vg-kqJ"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="4CQ-ep-0nA" secondAttribute="trailing" constant="16" id="Dj5-E5-K7K"/>
                 <constraint firstItem="dHi-KP-aLb" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="Q3S-o7-9Ki"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="1yn-q7-SOV" secondAttribute="trailing" constant="19" id="SSQ-ou-ias"/>
                 <constraint firstItem="1yn-q7-SOV" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Lr7-du-8Ab" secondAttribute="bottom" constant="10" id="Y0E-XL-Mmg"/>
                 <constraint firstItem="4CQ-ep-0nA" firstAttribute="top" secondItem="0eO-04-gGf" secondAttribute="bottom" id="Z5j-9b-i4p"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Lr7-du-8Ab" secondAttribute="trailing" constant="16" id="k8I-FF-bxI"/>
                 <constraint firstItem="4CQ-ep-0nA" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="liD-6S-D1X"/>
                 <constraint firstItem="rNb-KF-pW8" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="ngP-tu-RoV"/>
                 <constraint firstItem="1yn-q7-SOV" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="19" id="qDk-zi-7gH"/>
                 <constraint firstItem="rNb-KF-pW8" firstAttribute="top" secondItem="4CQ-ep-0nA" secondAttribute="bottom" constant="14" id="qSx-jn-J7j"/>
-                <constraint firstItem="Lr7-du-8Ab" firstAttribute="width" secondItem="fnl-2z-Ty3" secondAttribute="width" multiplier="0.5" id="qbj-yY-N12"/>
                 <constraint firstItem="0eO-04-gGf" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="uan-DA-fDE"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="1yn-q7-SOV" secondAttribute="bottom" constant="76" id="ugU-2S-nEq"/>
                 <constraint firstItem="Lr7-du-8Ab" firstAttribute="top" secondItem="rNb-KF-pW8" secondAttribute="bottom" id="vlh-N3-07o"/>
                 <constraint firstItem="0eO-04-gGf" firstAttribute="top" secondItem="dHi-KP-aLb" secondAttribute="bottom" constant="28" id="w8I-3h-4SN"/>
                 <constraint firstItem="dHi-KP-aLb" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="21.309999999999999" id="zfr-U7-1VH"/>
             </constraints>
-            <point key="canvasLocation" x="74" y="85"/>
+            <point key="canvasLocation" x="73.913043478260875" y="84.375"/>
         </view>
     </objects>
     <resources>
