--- a/MyMonee-Final/Views/TableViewCells/ImpianTableViewCell.xib
+++ b/MyMonee-Final/Views/TableViewCells/ImpianTableViewCell.xib
@@ -23,46 +23,63 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TITLE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fc2-vV-qzx">
-                        <rect key="frame" x="10" y="11" width="289" height="29"/>
+                        <rect key="frame" x="10" y="11" width="222" height="29"/>
                         <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="14"/>
                         <color key="textColor" name="1A1A1A"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.70999999999999996" translatesAutoresizingMaskIntoConstraints="NO" id="dJd-NX-95m">
-                        <rect key="frame" x="10" y="50" width="289" height="4"/>
+                        <rect key="frame" x="10" y="50" width="222" height="4"/>
                         <color key="tintColor" red="0.31372549019607843" green="0.41176470588235292" blue="0.72156862745098038" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="progressTintColor" name="5069B8"/>
                     </progressView>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="akar-icons_chevron-right" translatesAutoresizingMaskIntoConstraints="NO" id="kT0-mV-FsU">
-                        <rect key="frame" x="309" y="40" width="24" height="24"/>
-                        <constraints>
-                            <constraint firstAttribute="width" secondItem="kT0-mV-FsU" secondAttribute="height" multiplier="1:1" id="zRm-XD-dRu"/>
-                        </constraints>
-                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="IDR XXX.XXX / IDR X.XXX.XXX" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X2S-dm-EIX">
-                        <rect key="frame" x="10" y="64" width="289" height="13"/>
+                        <rect key="frame" x="10" y="64" width="222" height="13"/>
                         <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="11"/>
                         <color key="textColor" name="BDBDBD"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6bL-Uu-9NH" userLabel="Delete">
+                        <rect key="frame" x="293" y="25" width="32" height="32"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="32" id="Dxo-FV-Ysc"/>
+                            <constraint firstAttribute="height" constant="32" id="nIL-48-IJ7"/>
+                        </constraints>
+                        <state key="normal" image="delete-1"/>
+                        <connections>
+                            <action selector="deleteAction:" destination="-1" eventType="touchUpInside" id="ub6-uX-hea"/>
+                        </connections>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nlk-lv-34d" userLabel="Confirm">
+                        <rect key="frame" x="249" y="25" width="32" height="32"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="32" id="EUG-e1-5AF"/>
+                            <constraint firstAttribute="width" constant="32" id="uxL-Xa-Ihm"/>
+                        </constraints>
+                        <state key="normal" image="disable_confirm"/>
+                        <connections>
+                            <action selector="confirmAction:" destination="-1" eventType="touchUpInside" id="cX6-yg-OKe"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
                     <constraint firstItem="X2S-dm-EIX" firstAttribute="width" secondItem="dJd-NX-95m" secondAttribute="width" id="0tZ-kj-GtL"/>
+                    <constraint firstItem="6bL-Uu-9NH" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="2NW-S1-hOS"/>
                     <constraint firstItem="fc2-vV-qzx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="11" id="8Zn-rc-HmO"/>
                     <constraint firstItem="X2S-dm-EIX" firstAttribute="top" secondItem="dJd-NX-95m" secondAttribute="bottom" constant="10" id="ASA-A1-s80"/>
                     <constraint firstItem="X2S-dm-EIX" firstAttribute="leading" secondItem="fc2-vV-qzx" secondAttribute="leading" id="Cdh-av-kxa"/>
-                    <constraint firstItem="kT0-mV-FsU" firstAttribute="leading" secondItem="dJd-NX-95m" secondAttribute="trailing" constant="10" id="D8T-Tx-mzX"/>
-                    <constraint firstAttribute="trailing" secondItem="kT0-mV-FsU" secondAttribute="trailing" constant="9" id="Jd2-jn-9oR"/>
+                    <constraint firstAttribute="trailing" secondItem="6bL-Uu-9NH" secondAttribute="trailing" constant="17" id="Kjj-1d-DrM"/>
                     <constraint firstItem="fc2-vV-qzx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="NU5-V9-QQh"/>
                     <constraint firstItem="dJd-NX-95m" firstAttribute="top" secondItem="fc2-vV-qzx" secondAttribute="bottom" constant="10" id="Oef-ke-bHy"/>
+                    <constraint firstItem="Nlk-lv-34d" firstAttribute="leading" secondItem="dJd-NX-95m" secondAttribute="trailing" constant="17" id="Okn-7L-c3m"/>
+                    <constraint firstItem="Nlk-lv-34d" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="T7F-dc-nvv"/>
                     <constraint firstItem="dJd-NX-95m" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="VuM-n7-kOj"/>
-                    <constraint firstItem="kT0-mV-FsU" firstAttribute="centerY" secondItem="dJd-NX-95m" secondAttribute="centerY" id="XuN-rT-Cb6"/>
                     <constraint firstItem="dJd-NX-95m" firstAttribute="leading" secondItem="fc2-vV-qzx" secondAttribute="leading" id="d5Y-cF-oQ1"/>
                     <constraint firstAttribute="bottom" secondItem="X2S-dm-EIX" secondAttribute="bottom" constant="5" id="e0o-Ci-4sE"/>
                     <constraint firstItem="X2S-dm-EIX" firstAttribute="trailing" secondItem="fc2-vV-qzx" secondAttribute="trailing" id="gKZ-uV-RkW"/>
                     <constraint firstItem="fc2-vV-qzx" firstAttribute="width" secondItem="dJd-NX-95m" secondAttribute="width" id="nl0-tM-kf4"/>
-                    <constraint firstItem="dJd-NX-95m" firstAttribute="top" secondItem="kT0-mV-FsU" secondAttribute="bottom" constant="-14" id="z8e-RL-8Sq"/>
+                    <constraint firstItem="6bL-Uu-9NH" firstAttribute="leading" secondItem="Nlk-lv-34d" secondAttribute="trailing" constant="12" id="zIb-dJ-YRS"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -74,6 +91,8 @@
             </userDefinedRuntimeAttributes>
             <connections>
                 <outlet property="amount" destination="X2S-dm-EIX" id="ZQK-M2-ajn"/>
+                <outlet property="confirm" destination="Nlk-lv-34d" id="LLJ-D0-8sq"/>
+                <outlet property="delete" destination="6bL-Uu-9NH" id="jCL-Zl-Vds"/>
                 <outlet property="progress" destination="dJd-NX-95m" id="ygV-Ia-dX9"/>
                 <outlet property="title" destination="fc2-vV-qzx" id="qOC-Db-3J2"/>
             </connections>
@@ -81,7 +100,8 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="akar-icons_chevron-right" width="24" height="24"/>
+        <image name="delete-1" width="32" height="32"/>
+        <image name="disable_confirm" width="32" height="32"/>
         <namedColor name="1A1A1A">
             <color red="0.10199999809265137" green="0.10199999809265137" blue="0.10199999809265137" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
